<resources>
    <string name="app_name">Assigment_app</string>
    <string name="sign_up"> SIGN UP!</string>
    <string name="mail_address">mail address</string>
    <string name="password">password</string>
    <string name="ok">Ok</string>
    <string name="already_a_member">already a member?</string>
    <string name="sign_in">SIGN IN!!</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="surname">surname</string>
    <string name="enter_your_surname">Enter Your Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="email_address">Email Address</string>
    <string name="profile">profile</string>
    <string name="dies">dial</string>
    <string name="logout">logout</string>
    <string name="cart">cart</string>
    <string name="icon">icon</string>
</resources>