<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:id="@+id/update_imageView"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:gravity="center_vertical"
                android:src="@drawable/avator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="@drawable/round_gf"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/account30"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_name_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/buttonEditName"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:onClick="buttonClickedEditName" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/account30"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_surname_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/surname"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/buttonEditSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/create24"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditSurname"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/phone50"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_phoneno_textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/dies"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/buttonEditPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/numberpad"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditPhoneNo"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewMail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/envelope30"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/textViewEmailAdress"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/mail_address"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"/>
            </TableRow>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id = "@+id/bottom_navigation"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_alignParentBottom = "true"
            app:itemBackground = "@color/colorPrimary"
            app:itemIconTint="#fff"
            app:itemTextColor="#fff"
            app:menu = "@menu/bottom_navigation"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>